implement own/disown operation (#16)
* implement own/disown operation
